# test_req_poetry

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  update_requirements.yaml
