[tool.poetry]
name = "name"
version = "0.2.0"
description = "Сервсис "
authors = ["Sergey-x <sergey.rubnikovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
isort = "^5.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
